--- a/workshops/introToFlexbox/css/style.css
+++ b/workshops/introToFlexbox/css/style.css
@@ -1,15 +1,41 @@
 .flex-container{
-  border: solid 10px #f1c40f;
+
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+
+  height:600px;
+  flex-wrap: wrap;
+
 }
 
 .flex-item{
-  border: solid 3px red;
+
   font-size: 50px;
   text-align: center;
+  margin:10px;
+  width: calc(33.333% - 40px);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
+.girl-image{
+  width: 50%;
 
+}
 .item1{
+
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
   background-color: #1abc9c
+
+
+}
+.icon-flex{
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+
 }
 
 .item2{
